<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </SearchView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Deals_Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deals_header"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/OutrInn_D1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/OutrInn_deal1"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/Chumleys_D1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/Chumleys_deal1"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/Threes_D1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/Threes_deal1"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/Midway_D1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/Midway_deal1"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/OutrInn_D2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/OutrInn_deal2"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/Tuna_D1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/Tuna_deal1"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
