<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </SearchView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Deals_Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/OutrInn_name"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/HoursOp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/Hours_Operation"
                android:textAlignment="center"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/OutrInn_Hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/OutrInn_hours"
                android:textAlignment="center"
                android:textSize="15sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/Directions"
                android:textAlignment="center"
                android:textSize="25sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
